--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,18 +141,21 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Docker Login
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3.1.0
         with:
           username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_PASS }}
 
-      - name: Build Docker
-        run: |
-          docker build --tag laboratorio-devsecops-final:latest .
-
-      - name: Push Docker
-        run: |  
-          docker push laboratorio-devsecops-final:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Docker build
+        run: | 
+          docker build -t roderico/laboratorio-devsecops-final:latest .
+          
+      - name: Docker push
+        run: | 
+          docker push roderico/laboratorio-devsecops-final:latest
 
   DockerScan:
     needs: Dockerbuild
@@ -162,16 +165,16 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_PASS }}
 
       - name: Pull de la imagen Docker
         run: |
-          docker pull laboratorio-devsecops-final:latest
+          docker pull roderico/laboratorio-devsecops-final:latest
 
       - name: run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'laboratorio-devsecops-final:latest'
+          image-ref: 'roderico/laboratorio-devsecops-final:latest'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
