--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,5 +179,5 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH,MEDIUM'
+          severity: 'CRITICAL,HIGH'
           timeout: '5m'
