--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,7 +183,7 @@ jobs:
           timeout: '5m'
 
   owasp_zap_baseline_scan:
-    needs: Dockerbuild
+    needs: DockerScan
     runs-on: ubuntu-latest
     steps:
       - name: Docker Login
