--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,13 +186,13 @@ jobs:
     needs: DockerScan
     runs-on: self-hosted
     steps:
-      - name: Despliegue Aplicacion
-        run: |
-          docker run -d -p 8080:8080 roderico/laboratorio-devsecops-final:latest
+#      - name: Despliegue Aplicacion
+#        run: |
+#          docker run -d -p 8080:8080 roderico/laboratorio-devsecops-final:latest
           
-      - name: Sleep
-        run: |
-          sleep 3
+#      - name: Sleep
+#        run: |
+#          sleep 3
 
       - name: OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.11.0
