--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,6 +186,10 @@ jobs:
     needs: DockerScan
     runs-on: self-hosted
     steps:
+      - name: Install prerequisites
+        run: |
+          apt-get update && apt-get install -y touch
+
       - name: OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.11.0
         with:
