instala prerequisitos para el dast

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,7 +188,8 @@ jobs:
     steps:
       - name: Install prerequisites
         run: |
-          apt-get update && apt-get install -y touch
+          Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
+          Install-Module -Name touch -Force -Scope CurrentUser
 
       - name: OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.11.0
