--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,20 +186,21 @@ jobs:
     needs: DockerScan
     runs-on: self-hosted
     steps:
+#      - name: Despliegue Aplicacion
+#        run: |
+#          docker run -d -p 8080:8080 roderico/laboratorio-devsecops-final:latest
+          
+#      - name: Sleep
+#        run: |
+#          sleep 3
 
       - name: OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          issue_title: 'ZAP Scan Baseline Report'
-          fail_action: false
-          allow_issue_writing: true
-          artifact_name: zap_scan
 
       - name: Upload HTML report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: DAST-Report
-          path: zap_scan
+          path: DAST.html
