--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,6 +198,12 @@ jobs:
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: ghcr.io/zaproxy/zaproxy:stable
+          issue_title: ZAP Scan Baseline Report
+          fail_action: false
+          allow_issue_writing: true
+          artifact_name: zap_scan
 
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
