--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,36 +183,30 @@ jobs:
           timeout: '5m'
 
   owasp_zap_baseline_scan:
-    needs: DockerScan
-    runs-on: self-hosted
-    steps:
-      - name: Despliegue Aplicacion
-        run: |
-          docker run --network=host -d -p 8080:80 roderico/laboratorio-devsecops-final:latest
-          
-      - name: Sleep
-        run: |
-          sleep 15
+  needs: DockerScan
+  runs-on: self-hosted
+  steps:
+    - name: Despliegue Aplicacion
+      run: |
+        docker run -d -p 8085:80 roderico/laboratorio-devsecops-final:latest
+        
+    - name: Sleep
+      run: |
+        sleep 3
 
-      - name: Print Docker Logs
-        run: docker logs $(docker ps -q -f "ancestor=roderico/laboratorio-devsecops-final:latest")
+    - name: OWASP ZAP Baseline Scan
+      uses: zaproxy/action-baseline@v0.11.0
+      with:
+        target: 'http://localhost:8085'
+        token: ${{ secrets.GITHUB_TOKEN }}
+        docker_name: ghcr.io/zaproxy/zaproxy:stable
+        issue_title: ZAP Scan Baseline Report
+        fail_action: false
+        allow_issue_writing: true
+        artifact_name: zap_scan
 
-      - name: Print Network Config
-        run: docker network inspect bridge
-
-      - name: OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.11.0
-        with:
-          target: 'http://localhost:8080'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: ghcr.io/zaproxy/zaproxy:stable
-          issue_title: ZAP Scan Baseline Report
-          fail_action: false
-          allow_issue_writing: true
-          artifact_name: zap_scan
-
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v4
-        with:
-          name: DAST-Report
-          path: DAST.html
+    - name: Upload HTML report
+      uses: actions/upload-artifact@v4
+      with:
+        name: DAST-Report
+        path: DAST.html
