--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -212,14 +212,15 @@ jobs:
 
       - name: Check for high or medium alerts
         run: |
-          HIGH_COUNT=$(grep -o '"risk": "High"' report_json.json | wc -l)
-          MEDIUM_COUNT=$(grep -o '"risk": "Medium"' report_json.json | wc -l)
-          if [ $HIGH_COUNT -ne 0 ] || [ $MEDIUM_COUNT -ne 0 ]; then
-            echo "High or medium risk alerts found!"
+          $HIGH_COUNT = (Get-Content report_json.json | Select-String -Pattern '"risk": "High"' | Measure-Object).Count
+          $MEDIUM_COUNT = (Get-Content report_json.json | Select-String -Pattern '"risk": "Medium"' | Measure-Object).Count
+          if ($HIGH_COUNT -ne 0 -or $MEDIUM_COUNT -ne 0) {
+            Write-Output "High or medium risk alerts found!"
             exit 1
-          else
-            echo "No high or medium risk alerts found."
-          fi
+          } else {
+            Write-Output "No high or medium risk alerts found."
+          }
+        shell: pwsh
 
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
